--- a/content/Week15.html
+++ b/content/Week15.html
@@ -135,6 +135,12 @@ img.add_border {
         </header>
     <div id="tipue_search_content">Week14 << <a href='Week14.html'>Previous</a> <a href='Week16.html'>Next</a> >> Week16<br /><h1>Week15</h1>
 <p><span style="background-color: #ffff00;">Fossil</span></p>
+<p><span style="background-color: #ffff00;"></span>因為被標記期間無法推送至github，但一樣要有推送紀錄去評分，所以使用GOGS來當作一個推送的平台，如下圖。</p>
+<p><img alt="" height="480" src="./../images/fossil.PNG" width="544"/></p>
+<p></p>
+<p>1. 先去<a href="https://fossil.kmol.info:3443/user/sign_up">註冊</a>一個跟原先帳號一樣名稱的帳號。</p>
+<p>2. 創建一個跟原先倉儲一樣名稱的倉儲。</p>
+<p>3. 利用git remote add 指令。</p>
 <p><span style="background-color: #ffff00;"></span></p>
 <p><span style="background-color: #ffff00;">RoboDK機械手臂</span></p>
 <ol>
@@ -334,7 +340,8 @@ while idTake &gt;= 0:
 robot.MoveJ([0,0,0,0,10,-200])</pre>
 <p><span style="background-color: #ffffff;"></span></p>
 <p><span style="background-color: #ffffff;">操作影片 : </span></p>
-<p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/kUNfIIMaBtk" width="560"></iframe></span></p><br />Week14 << <a href='Week14.html'>Previous</a> <a href='Week16.html'>Next</a> >> Week16</div>
+<p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/kUNfIIMaBtk" width="560"></iframe></span></p>
+<br />Week14 << <a href='Week14.html'>Previous</a> <a href='Week16.html'>Next</a> >> Week16</div>
         
     <!-- footer -->
       <div class="container">
