--- a/content/Week16.html
+++ b/content/Week16.html
@@ -197,7 +197,8 @@ if (auxiliaryData[1]==53) then --r left2 turn in degree
 <p></p>
 <p>操作影片 : </p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/I1acNveThp8" width="560"></iframe></p>
-<p>五個取分項目皆在期限內完成，自評完成度100%</p><br />Week15 << <a href='Week15.html'>Previous</a> <a href='Week17.html'>Next</a> >> Week17</div>
+<p>五個取分項目皆在期限內完成，自評完成度100%</p>
+<br />Week15 << <a href='Week15.html'>Previous</a> <a href='Week17.html'>Next</a> >> Week17</div>
         
     <!-- footer -->
       <div class="container">
