--- a/content/Week14.html
+++ b/content/Week14.html
@@ -143,7 +143,8 @@ img.add_border {
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/C_wH2D1PMG0" width="560"></iframe></p>
 <p><span style="background-color: #ffffff;"></span></p>
 <p><span style="background-color: #ffffff;"></span></p>
-<p><span style="background-color: #ffffff;"></span></p><br />Week13 << <a href='Week13.html'>Previous</a> <a href='Week15.html'>Next</a> >> Week15</div>
+<p><span style="background-color: #ffffff;"></span></p>
+<br />Week13 << <a href='Week13.html'>Previous</a> <a href='Week15.html'>Next</a> >> Week15</div>
         
     <!-- footer -->
       <div class="container">
