--- a/content/Experience.html
+++ b/content/Experience.html
@@ -166,10 +166,11 @@ img.add_border {
 <p><span style="background-color: #ccffff;"><span>Week13</span></span></p>
 <p>由於疫情逐漸加重的關係，開始採用google meeting的方式線上直播教學，這週我們先是開一個新的會議各自討論，並且讓組員們各自show自己所繪製的組合圖/零件，這個方式比起在教室大家跑來跑去各自的電腦看還要有效率，並且也能讓每個組員都能確實參與到開會內。。</p>
 <p><span style="background-color: #ccffff;"><span>Week14</span></span></p>
-<p> </p>
+<p><span>這週我們先將其中一個組員繪製的停車塔放進coppeliasim裡面模擬，先是加進Revolute joint、Prismatic joint跟設好Target velocity而已，並且將物體的dynamic打開，目前就是能夠讓底座上升及讓外殼旋轉讓車子能順利抵達樓上的停車位而已，尚有許多地方要改良。</span></p>
 <p><span style="background-color: #ccffff;"><span>Week15</span></span></p>
-<p><span style="background-color: #ccffff;"><span></span></span></p>
+<p>這週上的是<span>Lua embedded scripts及Python remote API，比較難理解一點，但也有成功完成老師的robotDK的作業，而分組網站</span>這週我們將各個部位加上老師上課所教的Lua scipt，並加入message_keypress的程式碼讓各部位能夠用相對應的鍵盤作動，最後在組長的幫忙下也是能如預期地作動了。</p>
 <p><span style="background-color: #ccffff;"><span>Week16</span></span></p>
+<p>這週github帳戶好不容易解除flagged了，能恢復之前的協同方式了，這週老師指派了一個MTB_robot的取分項目，流程大概就是從onshape繪圖到放進coppeliasim做動都要由自己完成，雖然一 開始也是卡了很久，但花時間去看了各種國外網站教學後也是順利完成了100%。</p>
 <p><span style="background-color: #ccffff;"><span>Week17</span></span></p>
 <p><span style="background-color: #ccffff;"><span>Week18</span></span></p>
 <p></p><br />Week17 << <a href='Week17.html'>Previous</a> </div>
