--- a/content/Week14.html
+++ b/content/Week14.html
@@ -141,7 +141,13 @@ img.add_border {
 <p><span style="background-color: #ffffff;"><img alt="" height="321" src="./../images/朝旭設計圖.png" width="489"/></span></p>
 <p>講解影片 : </p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/C_wH2D1PMG0" width="560"></iframe></p>
-<p><span style="background-color: #ffffff;"></span></p>
+<p><span style="background-color: #ffff00;">Coppeliasim 控制程式學習</span></p>
+<ol>
+<li>Lua embedded scripts - 根據<a href="https://www.lua.org/pil/1.html">官方簡介</a>與<span> </span><a href="https://www.tutorialspoint.com/lua/index.htm">Tutorial</a>, 在<a href="http://mde.tw/lab/downloads/lua/index.html">網際解譯器</a>中執行, 並參考<span> </span><a href="http://mde.tw/cad2020/content/CoppeliaSim.html">CAD2020 CoppeliaSim</a><span> </span>頁面中的範例, 了解如何利用 non-threaded and threaded Lua 操控模擬場景中的機電系統。</li>
+<li>Legacy Python remote API - 根據<a href="https://www.coppeliarobotics.com/helpFiles/en/legacyRemoteApiOverview.htm">簡介</a>,<span> </span><a href="https://www.coppeliarobotics.com/helpFiles/en/remoteApiClientSide.htm">客戶端需求說明</a>與<span> </span><a href="http://fid.cl/courses/ai-robotics/vrep-tut/pythonBubbleRob.pdf">Tutorial</a>, 並參考<span> </span><a href="http://mde.tw/cad2020/content/CoppeliaSim.html">CAD2020 CoppeliaSim</a><span> </span>頁面中的範例, 查詢<span> </span><a href="https://www.coppeliarobotics.com/helpFiles/en/remoteApiFunctionsPython.htm">Python remote API 函式</a>, 了解如何利用 Python 操控模擬場景中的機電系統。</li>
+<li>B0-based remote API - 根據<a href="https://www.coppeliarobotics.com/helpFiles/en/b0RemoteApiOverview.htm">簡介</a>了解如何利用 Python 操控模擬場景中的機電系統。</li>
+<li>在 Python remote API 中導入 Flask, 並啟動 server 的多埠號架構, 將場景中的 image sensor 影像串流至各操控端瀏覽器, 以便執行組員間的場景協同控制系統設計。</li>
+</ol>
 <p><span style="background-color: #ffffff;"></span></p>
 <p><span style="background-color: #ffffff;"></span></p>
 <br />Week13 << <a href='Week13.html'>Previous</a> <a href='Week15.html'>Next</a> >> Week15</div>
