--- a/content/Experience.html
+++ b/content/Experience.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li class='has-children'><a href='Week5~9.html'>Week5~9</a><ul class='dropdown'><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li class='has-children'><a href='Week10~18.html'>Week10~18</a><ul class='dropdown'><li><a href='Week10.html'>Week10</a><li><a href='Week11.html'>Week11</a><li><a href='Week12.html'>Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a><li><a href='Week15.html'>Week15</a><li><a href='Week16.html'>Week16</a><li><a href='Week17.html'>Week17</a></li></li></ul></ul><li><a href='Experience.html'>Experience</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li class='has-children'><a href='Week5~9.html'>Week5~9</a><ul class='dropdown'><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li class='has-children'><a href='Week10~18.html'>Week10~18</a><ul class='dropdown'><li><a href='Week10.html'>Week10</a><li><a href='Week11.html'>Week11</a><li><a href='Week12.html'>Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a><li><a href='Week15.html'>Week15</a><li><a href='Week16.html'>Week16</a><li><a href='Week17.html'>Week17</a><li><a href='Week18.html'>Week18</a></li></li></ul></ul><li><a href='Experience.html'>Experience</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week17 << <a href='Week17.html'>Previous</a> <br /><h1>Experience</h1>
+    <div id="tipue_search_content">Week18 << <a href='Week18.html'>Previous</a> <br /><h1>Experience</h1>
 <p><span style="background-color: #ccffff;">Week1</span></p>
 <p><span style="background-color: #ffffff;">開始了協同產品設計的第一週，說起來也慚愧，畢竟是之前太混什麼都沒學到才被當的，這學期會認真學習的。</span></p>
 <p><span style="background-color: #ffffff;">一開始一如往常地建立個人倉儲，這次不一樣的事是直接使用現成的子模組，比起以前方扁許多，然後薛席從英文單字了解其中的意義，像collaborative,product,design等等，最後就是編輯自己的leo editer，雖然有點落後進度不過會努力跟上的。</span></p>
@@ -172,8 +172,10 @@ img.add_border {
 <p><span style="background-color: #ccffff;"><span>Week16</span></span></p>
 <p>這週github帳戶好不容易解除flagged了，能恢復之前的協同方式了，這週老師指派了一個MTB_robot的取分項目，流程大概就是從onshape繪圖到放進coppeliasim做動都要由自己完成，雖然一 開始也是卡了很久，但花時間去看了各種國外網站教學後也是順利完成了100%。</p>
 <p><span style="background-color: #ccffff;"><span>Week17</span></span></p>
+<p>這週是最後一個禮拜能做的時間了，上課時就以google meeting的方式簡單敘述這幾週做的東西及有沒有完成老師派予的任務。雖然跟預期中的還是有一定落差，但是也算是在理想範圍內，雖然協同上也遇到了很多困難，也都成功解決並前往未來的道路了。</p>
 <p><span style="background-color: #ccffff;"><span>Week18</span></span></p>
-<p></p><br />Week17 << <a href='Week17.html'>Previous</a> </div>
+<p>這週是期末考週，也是分組專題的最後一個禮拜了，雖然沒有將成品成功做出來，但也沒辦法繼續完成了，希望在未來的道路上也能跟老師一樣大有成就。</p>
+<p></p><br />Week18 << <a href='Week18.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
