--- a/content/Week17.html
+++ b/content/Week17.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li class='has-children'><a href='Week5~9.html'>Week5~9</a><ul class='dropdown'><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li class='has-children'><a href='Week10~18.html'>Week10~18</a><ul class='dropdown'><li><a href='Week10.html'>Week10</a><li><a href='Week11.html'>Week11</a><li><a href='Week12.html'>Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a><li><a href='Week15.html'>Week15</a><li><a href='Week16.html'>Week16</a><li><a href='Week17.html'>Week17</a></li></li></ul></ul><li><a href='Experience.html'>Experience</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li class='has-children'><a href='Week5~9.html'>Week5~9</a><ul class='dropdown'><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li class='has-children'><a href='Week10~18.html'>Week10~18</a><ul class='dropdown'><li><a href='Week10.html'>Week10</a><li><a href='Week11.html'>Week11</a><li><a href='Week12.html'>Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a><li><a href='Week15.html'>Week15</a><li><a href='Week16.html'>Week16</a><li><a href='Week17.html'>Week17</a><li><a href='Week18.html'>Week18</a></li></li></ul></ul><li><a href='Experience.html'>Experience</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,9 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week16 << <a href='Week16.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience<br /><h1>Week17</h1>
-<h4>Week18</h4>
-<br />Week16 << <a href='Week16.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience</div>
+    <div id="tipue_search_content">Week16 << <a href='Week16.html'>Previous</a> <a href='Week18.html'>Next</a> >> Week18<br /><h1>Week17</h1>
+<p>這週以google meeting分享自己螢幕畫面的方式簡單的敘述學期成果，並且學員互評。</p>
+<p></p>
+<br />Week16 << <a href='Week16.html'>Previous</a> <a href='Week18.html'>Next</a> >> Week18</div>
         
     <!-- footer -->
       <div class="container">
