--- a/content/Week18.html
+++ b/content/Week18.html
@@ -136,6 +136,10 @@ img.add_border {
     <div id="tipue_search_content">Week17 << <a href='Week17.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience<br /><h1>Week18</h1>
 <p>2021 Spring:</p>
 <p>W18 期末考週之前, 請兩班各組員拍攝一段 3 - 5 分鐘, 帶有字幕說明的個人期末報告影片, 說明一下個人與分組在本學期所完成內容之導覽. 影片必須包含個人倉儲提交推送次數與頻率畫面說明, 以及各階段實習操作的影片內容介紹, 完成後請 upload 到 Youbube, 標題必須為"國立虎尾科技大學 - 機械設計工程系 - 協同產品設計實習 - 期末報告 - 學號”。</p>
+<p></p>
+<p>期末影片: </p>
+<p></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/jESHFBTXlgI" width="560"></iframe></p>
 <br />Week17 << <a href='Week17.html'>Previous</a> <a href='Experience.html'>Next</a> >> Experience</div>
         
     <!-- footer -->
